tests/lean/guessLexDiff.lean.expected.out
Inferred termination argument:
termination_by n - i
Inferred termination argument:
termination_by Array.size xs - i
Inferred termination argument:
termination_by Array.size xs - i
guessLexDiff.lean:35:4-35:16: error: fail to show termination for
  failure
with errors
argument #2 was not used for structural recursion
  failed to eliminate recursive application
    _root_.failure xs i

structural recursion cannot be used

Could not find a decreasing measure.
The arguments relate at each recursive call as follows:
(<, ≤, =: relation proved, ? all proofs failed, _: no proof attempted)
            i #1 #2
1) 35:4-16  =  =  =
2) 35:36-54 ?  <  ≤
3) 35:4-16  _  =  =
4) 42:4-20  _  <  <
5) 48:8-20  _  ?  ≤

#1: Array.size xs - i
#2: Array.size xs - (i + 1)

Please use `termination_by` to specify a decreasing measure.
guessLexDiff.lean:53:4-53:18: error: fail to show termination for
  mutual_failure
  mutual_failure2
with errors
structural recursion does not handle mutually recursive functions

Could not find a decreasing measure.
The arguments relate at each recursive call as follows:
(<, ≤, =: relation proved, ? all proofs failed, _: no proof attempted)
Call from mutual_failure to mutual_failure2 at 55:4-24:
   i #1 #2
i  =  ?  ?
#3 ?  =  ?
Call from mutual_failure to mutual_failure2 at 55:52-78:
   i #1 #2
i  ?  _  _
#3 _  <  _
Call from mutual_failure to mutual_failure2 at 55:4-24:
   i #1 #2
i  _  _  _
#3 _  =  _
Call from mutual_failure to mutual_failure2 at 62:4-28:
   i #1 #2
i  _  _  _
#3 _  <  _
Call from mutual_failure to mutual_failure2 at 68:8-28:
   i #1 #2
i  _  _  _
#3 _  ?  _
Call from mutual_failure2 to mutual_failure at 74:4-23:
   i #3
i  _  _
#1 _  _
#2 _  _
Call from mutual_failure2 to mutual_failure at 74:50-75:
   i #3
i  _  _
#1 _  _
#2 _  _
Call from mutual_failure2 to mutual_failure at 78:4-27:
   i #3
i  _  _
#1 _  _
#2 _  _
Call from mutual_failure2 to mutual_failure at 84:8-27:
   i #3
i  _  _
#1 _  _
#2 _  _


#1: Array.size xs - i
#2: Array.size xs - (i + 1)
#3: Array.size xs - i

Please use `termination_by` to specify a decreasing measure.
